Se agrega funcion ordenar

--- a/cafetera.html
+++ b/cafetera.html
@@ -7,6 +7,6 @@
     <title>Cafetera</title>
 </head>
 <body>
-    <script src="./tarea5.js"></script>
+    <script src="./cafetera.js"></script>
 </body>
 </html>
