Se agrega manejo de LSmy DOM

--- a/cafetera.html
+++ b/cafetera.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cafetera</title>
+    <title>Cafetera a Monedas</title>
 </head>
+
 <body>
+    <h1>Cafetera a monedas</h1>
+    <div>
+        <ul id="menu">
+            Menu:
+            
+        </ul>
+    </div>
     <script src="./cafetera.js"></script>
 </body>
+
 </html>
