Cafetera con botones

--- a/cafetera.html
+++ b/cafetera.html
@@ -6,55 +6,78 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cafetera a Monedas</title>
-    <link rel="stylesheet" href="./estilos_cafetera.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cabin:wght@700&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">   
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Roboto+Mono:wght@500&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="./estilos_cafetera.css">
 </head>
 
 <body>
-    <h1>Cafetera a monedas</h1>
-    <p>
-        Descripción de funcionamiento: <br>
-        Además de los comandos señalados al iniciar la cafetera, se puede ingresar 'APAGAR' para apagar la cafetera,
-        'RECURSOS' para conocer la cantidad de recursos disponibles, 'DINERO' para conocer la cantidad de dinero al
-        interior de la maquina, 'AGREGAR' para agregar una nueva bebida a la cafetera y 'ORDENAR' para ver un listado de
-        las bebidas ordenadas segun la caracteristica que se indique.
-    </p>
-    <div id="menuGeneral">
-        <ul id="menu">
-            Menu:
+    <div class="contenedor">
+        <h1>CAFETERA A MONEDAS</h1>
+        <div class="chinche"></div>
+        <p class="descripcion">
+            Comandos de cafetera: <br>
+            Ingrese la palabra 'RECURSOS' para conocer la cantidad de recursos disponibles, 'DINERO' para conocer la cantidad de dinero al
+            interior de la maquina, 'AGREGAR' para agregar una nueva bebida a la cafetera.
+        </p>
+        <div id="menuGeneral">
+            <ul id="menu">
+                Menu:
 
-        </ul>
-    </div>
-    <form action="" id="formOrdenes">
-        <label for="otroPedido">Otra orden:</label>
-        <input type="text" placeholder="Indique su orden" id="orden" name="orden">
-        <button>Enviar</button>
-    </form>
-    <form action="" id="formNuevaBebida" class="visible escondido">
-        <p>Para crear una nueva bebida indique:</p>
-        <label for="nmbNuevaBebida">Nombre de la bebida:</label>
-        <input type="text" name="nombreNB"> <br>
-        <label for="agNuevaBebida">Cantidad de agua en ml:</label>
-        <input type="text" name="aguaNB"><br>
-        <label for="leNuevaBebida">Cantidad de leche en ml:</label>
-        <input type="text" name="lecheNB"><br>
-        <label for="cafNuevaBebida">Cantidad de cafe en gr:</label>
-        <input type="text" name="cafeNB"><br>
-        <label for="cstNuevaBebida">Costo en $:</label>
-        <input type="text" name="costoNB"> <br>
-
-        <button id="listoNB">Listo</button>
-        <div id="puedeTomar">
-            
+            </ul>
         </div>
-    </form>
+        <form action="" id="formOrdenes">
+            <label for="otroPedido">Otra orden:</label>
+            <input type="text" placeholder="Indique su orden" id="orden" name="orden">
+            <button>Enviar</button>
+        </form>
+        <form action="" id="formNuevaBebida" class="visible escondido">
+            <p>Para crear una nueva bebida indique:</p>
+            <label for="nmbNuevaBebida">Nombre de la bebida:</label>
+            <input type="text" name="nombreNB"> <br>
+            <label for="agNuevaBebida">Cantidad de agua en ml:</label>
+            <input type="text" name="aguaNB"><br>
+            <label for="leNuevaBebida">Cantidad de leche en ml:</label>
+            <input type="text" name="lecheNB"><br>
+            <label for="cafNuevaBebida">Cantidad de cafe en gr:</label>
+            <input type="text" name="cafeNB"><br>
+            <label for="cstNuevaBebida">Costo en $:</label>
+            <input type="text" name="costoNB"> <br>
 
-    <div class="dinero escondido">
-        <button class="botonDinero" id="cinco">$5</button>
-        <button class="botonDinero" id="diez">$10</button>
-        <button class="botonDinero" id="veinte">$20</button>
-        <button class="botonDinero" id="cincuenta">$50</button>
+            <button id="listoNB">Listo</button>
+            <div id="puedeTomar">
+<button id="botonPuedeTomar" class="escondido">Ok</button>
+            </div>
+        </form>
+        <div class="dinero escondido">
+            <button class="botonDinero" id="cinco">$5</button>
+            <button class="botonDinero" id="diez">$10</button>
+            <button class="botonDinero" id="veinte">$20</button>
+            <button class="botonDinero" id="cincuenta">$50</button>
+        </div>
+        <div id="cobro">
+            <button id="entregarDinero" class="escondido">Entregar Dinero</button>
+        </div>
+        <div id="mostrarRecursos" class="escondido">
+            <ul>
+                <li id="agua">Agua</li>
+                <li id="leche">Leche</li>
+                <li id="cafe">Café</li>
+            </ul>
+        </div>
+        <div id="mostrarDinero">
+        </div>
+        <div id="vuelto">
+
+        </div>
     </div>
-    <button id="entregarDinero">Entregar Dinero</button>
     <script src="./cafetera.js"></script>
 </body>
 
