Se agrega API de cambio

--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
         </div>
         <!-- div menu -->
         <div id="menuGeneral">
+            <div class="pesos-euros">
+                <label for="UYU">UYU</label> <input type="radio" name="UYU-EUR" id="UYU" value="UYU" checked="checked">
+                <label for="EUR">EUR</label> <input type="radio" name="UYU-EUR" id="EUR" value="EUR">
+            </div>
             <ul id="menu">
                 Menu:
 
@@ -121,6 +125,7 @@
         </div>
         <div class="vacio"></div>
     </div>
+
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="./cafetera2.js"></script>
 </body>
