--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <div class="contenedor">
+    <main class="contenedor">
         <h1 class="tituloCafetera">CAFETERA A MONEDAS</h1>
         <div class="instrucciones">
             <div class="chinche"></div>
@@ -124,7 +124,7 @@
             <p>Se deshabilito el boton por falta de recursos</p>
         </div>
         <div class="vacio"></div>
-    </div>
+    </main>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="./cafetera2.js"></script>
